# ChangeLog for x11-misc/xsri
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xsri/ChangeLog,v 1.2 2005/12/19 22:13:54 nelchael Exp $

  19 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> xsri-2.1.0.ebuild:
  Stable on x86.

*xsri-2.1.0 (01 Nov 2005)

  01 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> +metadata.xml,
  +xsri-2.1.0.ebuild:
  New package. Bug 97375, thanks to Thomas Weidner (3.14159@gmx.net).
