@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xsri
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xsri/ChangeLog,v 1.2 2005/12/19 22:13:54 nelchael Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xsri/ChangeLog,v 1.3 2006/01/13 13:25:19 nelchael Exp $
+
+  13 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> xsri-2.1.0.ebuild:
+  Fixed DEPEND for modular X.
 
   19 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> xsri-2.1.0.ebuild:
   Stable on x86.
